# dstoolkit-devcontainers

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  ci-tests.sh  pyproject.toml  pytest.ini  requirements-dev.txt
.azuredevops/: ado-ci-pipeline-ms-hosted.yml  ado-ci-pipeline-self-hosted.yml  pull_request_template.md  requirements.txt
.azuredevops/templates/: merge-coverage.yml  publish-test-results.yml  run-devcontainer.yml  setup-devcontainer.yml  test-devcontainer-job.yml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  requirements.txt  sync-to-azdo.yaml
.specify/specs/: research.md
notebooks/: sample_notebook.py
notebooks/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml  requirements.txt
src/: .amlignore  .dockerignore
src/common/: pyproject.toml  requirements.txt  sample_common.py
src/sample_cpu_project/: sample_main.py
src/sample_cpu_project/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml
src/sample_cpu_project/tests/: test_dummy.py
src/sample_pytorch_gpu_project/: .amlignore  .gitignore  README.md  dl-components-pipeline.yml  inference.py  sample-aml-components-pipeline.yml  sample_inference.py  sample_main.py  sample_train.py  train.py
src/sample_pytorch_gpu_project/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml  requirements.txt
src/sample_pytorch_gpu_project/aml_components/: evaluate-component.yaml  inference-component.yaml  train-component.yaml
src/sample_pytorch_gpu_project/aml_example/: inference.py  sample-aml-components-pipeline.yml  train.py
src/sample_pytorch_gpu_project/aml_example/aml_components/: inference-component.yaml  train-component.yaml
src/sample_pytorch_gpu_project/aml_example/aml_setup/: create-cpu-compute.yaml  create-gpu-compute.yaml
src/sample_pytorch_gpu_project/aml_setup/: create-cpu-compute.yaml  create-env.yaml  create-gpu-compute.yaml
src/sample_pytorch_gpu_project/sample_aml_components/: inference-component.yaml  train-component.yaml
src/sample_pytorch_gpu_project/tests/: test_dummy.py
