[project]
name = ""
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel==6.29.5",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.4",
    "pre-commit==4.1.0",
    "pytest-cov==6.0.0",
    "ruff==0.9.9",
]

[tool.uv]
package = false
