[project]
name = ""
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel==6.29.5",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pre-commit==4.2.0",
    "pytest-cov==6.1.0",
    "ruff==0.11.2",
]

[tool.uv]
package = false
