[project]
name = ""
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    # the below are used by AML, can be deleted if not using AML
    "mlflow==2.20.3",
    "azureml-mlflow==1.59.0.post1",
]

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.4",
    "pre-commit==4.1.0",
    "pytest-cov==6.0.0",
    "ruff==0.9.9",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]
torchvision = [
    { index = "pytorch-cu126" },
]
