[project]
name = ""
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "common",
    "torch==2.11.0",
    "torchvision==0.26.0",
    # the below are used by AML, can be deleted if not using AML
    "mlflow==3.9.0",
    "azureml-mlflow==1.62.0.post2",
]

[tool.uv.sources]
common = { path = "../../common", package = false }

[dependency-groups]
dev = [
    "mypy==1.20.0",
    "pytest==9.0.2",
    "pre-commit==4.5.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.8",
]

[tool.uv]
package = false
